@@ -1,3 +1,12 @@
+2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b43
+
+ * Fix: Album->rebuildCaptureDates was broken for subalbums.
+        Added also a nice progessbar.
+
+ * Fix/Change: Renamed Album->makeThumbnailRecursive into
+               makeThumbnails($recursive = false)
+               (Jep also progressbar ;-)
+
 2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b42
 
  Method enhancements
